Уточнение в README.md