@@ -1,1 +1,6 @@
 # arts2021spring-java
+
+---
+Я прописываю в конфигурацию запуска **VM-options**:
+
+*--module-path C:\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml*
